--- a/layouts/shortcodes/articles-filter.html
+++ b/layouts/shortcodes/articles-filter.html
@@ -4,7 +4,7 @@
 	{{- range $tag, $tags := .Site.Taxonomies.tags -}}
 	<button class="tag tag-{{ $tag | urlize }}" data-filter-tag="{{ $tag | urlize }}" data-filter="articles-filterable">{{ (i18n $tag) }}</button>
 	{{- end -}}
-	<button id="articles-filter__reset" class="button" data-filter="articles-filterable" data-reset="true">{{ (i18n "reset") }}</button>
+	<button id="articles-filter__reset" class="button" data-filter="articles-filterable" data-reset="true">{{ (i18n "filter-reset") }}</button>
 	</div>
 </div>
 <script type="text/javascript">
