--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
 		</style>
 	{{ end -}}
 	<!-- {{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }} -->
-	{{ if ne .Site.Params.show_ui false }}{{ partialCached "ui" . }}{{ end }}
+	{{ if ne .Site.Params.show_gadgets false }}{{ partialCached "gadgets" . }}{{ end }}
 	<header class="cluster">
 		{{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }}
 		{{ block "header" . }}{{ partialCached "header/inner" . }}{{end}}
@@ -26,8 +26,8 @@
 		{{ block "footer" . }}{{ partialCached "footer/inner" . }}{{end}}
 	</footer>
 	{{ partialCached "scripts" . }}
-	{{ with .Resources.Match "script.js" }}{{/* load script.js located by the content, if it exists */}}
-	<script async src="./script.js"></script>
-	{{ end }}
+	{{ if (fileExists "static/scripts/custom.js") -}}
+	<script async src="./scripts/custom.js"></script>
+	{{- end }}
 </body>
 </html>
