--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -334,6 +334,7 @@ body > footer {
 	font-size: var(--s-2);
 }
 
+.katex,
 article.preformatted {
 	font-size: var(--s-1);
 }
@@ -596,6 +597,10 @@ kbd {
 		box-shadow:         1px 1px 0px 0px var(--shadow-color);
 	}
 
+kbd kbd {
+	border: none;
+	box-shadow: none;
+}
 
 sub, sup {
 	font-size: 0.7em;
@@ -730,7 +735,7 @@ helper / common classes
 
 
 /*--------------------------------------------------------------
-animatiins
+animations
 --------------------------------------------------------------*/
 
 @keyframes sweep-right {
@@ -741,6 +746,16 @@ animatiins
 @keyframes sweep-bottom {
 	0%    { opacity: 0; margin-top: -1rem; }
 	100%  { opacity: 1; }
+}
+
+@keyframes slidey {
+	from { transform: translate(0, 100%); }
+	to   { transform: translate(0, 0); }
+}
+
+@keyframes slidex {
+	from { transform: translate(-100%, 0); }
+	to   { transform: translate(0, 0); }
 }
 
 
@@ -903,7 +918,7 @@ table styles
 --------------------------------------------------------------*/
 
 table {
-	display: block;
+	/*display: block;*/
 	margin: var(--gutter-height) auto;
 	width: 100%;
 	/*table-layout: fixed;*/
@@ -922,8 +937,12 @@ table caption {
 	text-align: right;
 }
 
+thead, tbody, tr {
+	width: 100%;
+}
+
 th, td {
-	padding: 0.25rem;
+	padding: 0.25em;
 
 	border-top: 0.5px dashed transparent;
 	border-bottom: 0.5px dashed transparent;
@@ -2569,17 +2588,12 @@ sup[id^="fnref:"]:target:after {
 	animation: slidex .3s;
 }
 
-@keyframes slidey {
-	from { transform: translate(0, 100%); }
-	to   { transform: translate(0, 0); }
+[id^="fn:"],
+[id^="fnref:"],
+[id^="fn:"] a,
+[id^="fnref:"] a {
+	text-decoration: none;
 }
-
-@keyframes slidex {
-	from { transform: translate(-100%, 0); }
-	to   { transform: translate(0, 0); }
-}
-
-
 
 
 /*--------------------------------------------------------------
