--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -66,7 +66,7 @@
 		{{ if .Params.Tags }}
 			<dt>{{ i18n "tags" }}</dt>
 			<dd class="tags">{{ range .Params.Tags -}}
-				<a href="/tags/{{ . | urlize }}" class="tag" rel="tag">{{ (i18n . ) }}</a>
+				{{ partial "tag" . }}
 			{{- end }}</dd>
 		{{ end }}
 		</dl>
