--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,11 +10,11 @@
 <link rel="icon" type="image/png" href="{{ "/favicon.png" | relURL }}">
 {{- end }}
 
-<link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}">
-<link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="screen">
-<link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="screen">
+<link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}" media="all">
+<link rel="preload" href="{{ "/styles/syntax.css" | relURL }}" media="screen" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="screen"></noscript>
+<link rel="preload" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="screen" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}" media="screen"></noscript>
 {{ if (fileExists "static/styles/custom.css") -}}
-<link rel="stylesheet" href="{{ "/styles/custom.css" | relURL }}">
+<link rel="stylesheet" href="{{ "/styles/custom.css" | relURL }}" media="all">
 {{- end }}
 
 {{ range .AlternativeOutputFormats -}}
