--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,17 +3,21 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ end }}">
 <head>
 	<meta charset="UTF-8">
-	<title>{{if .IsHome}}{{ .Site.Title }} • {{ .Title }}{{else}}{{ .Title }} • {{ .Site.Title }}{{end}}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{{ partial "head" . }}
+	<!-- include global custom styles, if they exist -->
+	{{ if (fileExists "static/styles/custom.css") -}}
+		<link rel="stylesheet" href="{{ "/styles/custom.css" | relURL }}" media="all">
+	{{- end }}
 </head>
 <body id="top" class="{{ .Kind }}{{ with .Site.Params.Theme }} {{ . }}{{ end }}{{ with .Params.Theme }} {{ . }}{{ end }}"{{ with .Site.Params.LanguageDir }} dir="{{ . }}"{{ end }}>
 	<!-- inline custom.css located by the content, if it exists -->
-	{{- with .Resources.GetMatch "custom.css" }}
-		{{- $customcss := . | resources.Minify }}
+	{{ with .Resources.GetMatch "custom.css" -}}
+		{{- $customcss := . | resources.Minify -}}
 		<style>
 			{{ $customcss.Content | safeCSS }}
 		</style>
-	{{ end -}}
+	{{- end }}
 	<!-- {{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }} -->
 	{{ if ne .Site.Params.show_gadgets false }}{{ partialCached "gadgets" . }}{{ end }}
 	<header class="cluster">
